// Copyright 2018 Alexander Trost. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = 'proto3';

package configs.v1alpha;
option go_package = "github.com/galexrt/edenconfmgmt/pkg/apis/configs/v1alpha";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/galexrt/edenconfmgmt/pkg/apis/core/v1alpha/api.proto";
import "github.com/galexrt/edenconfmgmt/pkg/apis/events/v1alpha/api.proto";

option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) =  true;
option (gogoproto.goproto_getters_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_unrecognized_all) = false;

service Configs {
    // Get a Config.
    rpc Get (GetRequest) returns (GetResponse);
    // List Configs.
    rpc List (ListRequest) returns (ListResponse);
    // Add a Config.
    rpc Add (AddRequest) returns (AddResponse);
    // Update a Config.
    rpc Update (UpdateRequest) returns (UpdateResponse);
    // Delete a Config.
    rpc Delete (DeleteRequest) returns (DeleteResponse);
    // Watch Config.
    rpc Watch (WatchRequest) returns (stream WatchResponse);
}

// Config object base.
message Config {
    // Metadata for Config object.
    core.v1alpha.ObjectMetadata metadata = 1;
    // Spec for Config.
    ConfigSpec spec = 2;
}

message ConfigSpec {
    // DataStore.
    DataStore dataStore = 1;
}

// DataStore config for the data store
message DataStore {
    // Type.
    string type = 1;
    // Count.
    int64 count = 2;
    // ETCD config options.
    ETCD etcd = 3;
}

message ETCD {
    // List of endpoints if running your own ETCD server (should only be used for testing).
    string endpoints = 1;
}

// Get
message GetRequest {
    core.v1alpha.GetOptions getOptions = 1;
}

message GetResponse {
    // Config object.
    Config config = 1;
}

// List
message ListRequest {
    core.v1alpha.ListOptions listOptions = 1;
}

message ListResponse {
    // Config list.
    repeated Config configs = 1;
}

// Add
message AddRequest {
    // Config object.
    Config config = 1;
}

message AddResponse {
    // Config object.
    Config config = 1;
}

// Update
message UpdateRequest {
    // Config object.
    Config config = 1;
}

message UpdateResponse {
    // Config object.
    Config config = 1;
}

// Delete
message DeleteRequest {
    // Config object.
    Config config = 1;
}

message DeleteResponse {
    // Config object.
    Config config = 1;
}

// Watch
message WatchRequest {
    core.v1alpha.WatchOptions watchOptions = 1;
}

message WatchResponse {
    // Event info for watch response.
    events.v1alpha.Event event = 1;
    // Config object.
    Config config = 2;
}
