// Copyright 2019 Alexander Trost. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = 'proto3';

package beacons.v1alpha;
option go_package = "github.com/galexrt/edenrun/pkg/apis/eden.run/trigger/beacons/v1alpha";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/galexrt/edenrun/pkg/grpc/plugins/apiserver/server.proto";
import "github.com/mwitkow/go-proto-validators/validator.proto";
import "github.com/galexrt/edenrun/pkg/apis/eden.run/core/meta/v1/meta.proto";

option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) =  true;
option (gogoproto.goproto_getters_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.populate_all) = true; // Needed for testgen
option (gogoproto.equal_all) = true;  // Needed for testgen
option (gogoproto.testgen_all) = false;
option (gogoproto.benchgen_all) = true;

service Beacons {
    // Get a Beacon.
    rpc Get (GetRequest) returns (GetResponse);
    // List Beacons.
    rpc List (ListRequest) returns (ListResponse);
    // Create a Beacon.
    rpc Create (CreateRequest) returns (CreateResponse);
    // Update a Beacon.
    rpc Update (UpdateRequest) returns (UpdateResponse);
    // Delete a Beacon.
    rpc Delete (DeleteRequest) returns (DeleteResponse);
    // Watch Beacon.
    rpc Watch (WatchRequest) returns (stream WatchResponse);
}

message Beacon {
    option (apiserver.options).generate = true;
    // Metadata for Beacon object.
    core.meta.v1.ObjectMetadata metadata = 1;
    // Spec for Beacon.
    BeaconSpec spec = 2;
}

message BeaconList {
    // Metadata for BeaconList object.
    core.meta.v1.ObjectMetadata metadata = 1 [(validator.field) = {msg_exists : true}];
    // List of Beacon objects.
    repeated Beacon items = 2;
}

// TODO
message BeaconSpec {
}

// Get request content.
message GetRequest {
    // core_v1.GetOptions
    core.meta.v1.GetOptions options = 1;
}

// Get response content.
message GetResponse {
    // Beacon object.
    Beacon beacon = 1;
}

// List request content.
message ListRequest {
    // core_v1.ListOptions
    core.meta.v1.ListOptions options = 1;
}

// List response content.
message ListResponse {
    // Beacon list.
    BeaconList beaconList = 1;
}

// Create Beacon request.
message CreateRequest {
    // core_v1.CreateOptions
    core.meta.v1.CreateOptions options = 1;
    // Beacon object.
    Beacon beacon = 2;
}

message CreateResponse {
    // Beacon object.
    Beacon beacon = 1;
}

// Update
message UpdateRequest {
    // core_v1.UpdateOptions
    core.meta.v1.UpdateOptions options = 1;
    // Beacon object.
    Beacon beacon = 2;
}

message UpdateResponse {
    // Beacon object.
    Beacon beacon = 1;
}

// Delete
message DeleteRequest {
    // core_v1.DeleteOptions
    core.meta.v1.DeleteOptions options = 1;
    // Beacon object.
    Beacon beacon = 2;
}

message DeleteResponse {
    // Beacon object.
    Beacon beacon = 1;
}

// Watch
message WatchRequest {
    // core_v1.WatchOptions
    core.meta.v1.WatchOptions options = 1;
}

message WatchResponse {
    // Beacon for watch response.
    Beacon beacon = 1;
}
